# crayfish

./: .gitignore  Cargo.toml
benches/: render_cube.rs
proptest-regressions/: normal.txt  tuples.txt
src/: camera.rs  canvas.rs  canvas_lib.rs  cli.rs  colors.rs  colors_lib.rs  constants.rs  groups.rs  intersection.rs  lib.rs  main.rs  materials.rs  matrix.rs  matrix_lib.rs  normal.rs  object.rs  ray.rs  ray_lib.rs  raytrace.rs  shapes.rs  transformations.rs  transformations_lib.rs  tuples.rs  tuples_lib.rs
src/shapes/: cube.rs  sphere.rs
tests/: spheres.rs
