[package]
name = "crayfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = "4.1.8"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.4"

[[bench]]
name = "render_cube"
harness = false

[profile.bench]
debug = true